// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Markdown widget does not render markdown widget when stringAttribute is unavailable 1`] = `
<div>
  <div
    class="mx-progress"
  />
</div>
`;

exports[`Markdown widget renders markdown widget 1`] = `
<div>
  <div
    class="widget-markdown"
  >
    <p>
      Markdown viewer default value
    </p>
    

  </div>
</div>
`;
